# whatever-find

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
benches/: search_benchmark.rs
examples/: basic_usage.rs  custom_config.rs
scripts/: build-all.ps1  build-all.sh
src/: error.rs  lib.rs
src/config/: mod.rs  settings.rs
src/indexer/: file_walker.rs  mod.rs
src/search/: matcher.rs  mod.rs
