[package]
name = "whatever-find"
version = "0.1.0"
edition = "2021"
authors = ["frkavka <your.email@example.com>"]
description = "A fast, cross-platform file search library with smart pattern detection - find whatever you need!"
license = "MIT OR Apache-2.0"
repository = "https://github.com/frkavka/whatever-find"
homepage = "https://github.com/frkavka/whatever-find"
documentation = "https://docs.rs/whatever-find"
readme = "README.md"
keywords = ["search", "files", "glob", "regex", "fuzzy"]
categories = ["filesystem", "command-line-utilities", "algorithms"]
rust-version = "1.70"

[lib]
name = "whatever_find"
path = "src/lib.rs"

[[bin]]
name = "whatever-find"
path = "src/bin/main.rs"
required-features = ["cli"]

[dependencies]
# Core dependencies
walkdir = "2.3"
regex = "1.7"
glob = "0.3"
thiserror = "1.0"

# Optional dependencies
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
anyhow = { version = "1.0", optional = true }
dirs = { version = "6.0.0", optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }

[features]
default = []
cli = ["clap", "anyhow", "dirs"]
config = ["serde", "serde_json", "dirs"]
async = ["tokio"]
full = ["cli", "config", "async"]

[dev-dependencies]
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "search_benchmark"
harness = false
